--- a/src/components/burger/buildControls/BuildControls.css
+++ b/src/components/burger/buildControls/BuildControls.css
@@ -4,8 +4,12 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    box-shadow: 0 2px 1px #CCC;
+    box-shadow: 0 2px 1px #ccc;
+    margin: auto;
     padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 .OrderButton {
